# uml-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TUTORIAL.md  builder.sh  flake.nix  install.sh  meson.build  meson.options  runServerAndTests.sh  shell.nix  uml-cpp.pc
src/cpp/test/parsers/: CMakeLists.txt  activityParserTest.cpp  associationParserTest.cpp  behavioredClassifierParserTest.cpp  classParserTest.cpp  commentParserTest.cpp  dataTypeParserTest.cpp  dependencyParserTest.cpp  deploymentParserTest.cpp  enumerationParserTest.cpp  expressionParserTest.cpp  generalizationSetParserTest.cpp  instanceSpecificationParserTest.cpp  interfaceParserTest.cpp  literalsParserTest.cpp  modelParserTest.cpp  opaqueBehaviorParserTest.cpp  operationParserTest.cpp  packageParserTest.cpp  parameterParserTest.cpp  primitiveTypeParserTest.cpp  profileParserTest.cpp  propertyParserTest.cpp  signalParserTest.cpp  structuredClassifierParserTest.cpp  templateableElementParserTest.cpp
src/cpp/test/uml/: CMakeLists.txt  UmlManagerTest.cpp  activityEdgeTest.cpp  activityNodeTest.cpp  activityTest.cpp  associationTest.cpp  behaviorTest.cpp  behavioredClassifierTest.cpp  classTest.cpp  classifierTest.cpp  commentTest.cpp  connectorTest.cpp  dataTypeTest.cpp  dependencyTest.cpp  deploymentTest.cpp  directedRelationshipTest.cpp  elementTest.cpp  enumerationTest.cpp  extensionTest.cpp  generalizationSetTest.cpp  generalizationTest.cpp  idTest.cpp  inputPinTest.cpp  instanceSpecificationTest.cpp  interfaceTest.cpp  manifestationTest.cpp  multiplicityElementTest.cpp  namedElementTest.cpp  namespaceTest.cpp  objectNodeTest.cpp  operationTest.cpp  outputPinTest.cpp  packageTest.cpp  parameterTest.cpp  portTest.cpp  profileApplicationTest.cpp  propertyTest.cpp  restfulTest.cpp  sequenceTest.cpp  setTest.cpp  (+7 more)
src/cpp/test/yuml-parsers/: CMakeLists.txt  activityEdgeParserTest.cpp  callBehaviorActionParserTest.cpp  classParserTest.cpp  classifierParserTest.cpp  controlFlowParserTest.cpp  createObjectActionParserTest.cpp  elementParserTest.cpp  instanceSpecificationParserTest.cpp  multiplicityElementParserTest.cpp  namedElementParserTest.cpp  objectFlowParserTest.cpp  objectNodeParserTest.cpp  operationParserTest.cpp  packageParserTest.cpp  parameterNodeParserTest.cpp  parameterParserTest.cpp  propertyParserTest.cpp  slotParserTest.cpp  typedElementParserTest.cpp
src/cpp/uml/: CMakeLists.txt  UmlManager.cpp  abstraction.cpp  action.cpp  actionInputPin.cpp  activity.cpp  activityEdge.cpp  activityFinalNode.cpp  activityGroup.cpp  activityNode.cpp  activityParameterNode.cpp  activityPartition.cpp  artifact.cpp  association.cpp  behavior.cpp  behavioralFeature.cpp  behavioredClassifier.cpp  callAction.cpp  callBehaviorAction.cpp  centralBufferNode.cpp  class.cpp  classifier.cpp  classifierTemplateParameter.cpp  comment.cpp  connectableElement.cpp  connector.cpp  connectorEnd.cpp  constraint.cpp  controlFlow.cpp  controlNode.cpp  createObjectAction.cpp  dataStoreNode.cpp  dataType.cpp  decisionNode.cpp  dependency.cpp  deployedArtifact.cpp  deployment.cpp  deploymentTarget.cpp  directedRelationship.cpp  element.cpp  (+81 more)
src/cpp/uml/cpp/: CMakeLists.txt  cppParser.cpp
src/cpp/uml/headers/: class.h  classifier.h  element.h  instanceSpecification.h  instanceValue.h  literalBool.h  literalInt.h  literalReal.h  literalString.h  model.h  namedElement.h  namespace.h  opaqueBehavior.h  operation.h  primitiveType.h  property.h  slot.h  type.h  typedElement.h  valueSpecification.h
src/cpp/uml/managers/: abstractClient.cpp  abstractManager.cpp  distributedManager.cpp  main.cpp  managerNode.cpp  umlClient.cpp  umlServer.cpp
src/cpp/uml/parsers/: CMakeLists.txt  behaviorParser.cpp  classParser.cpp  classifierParser.cpp  elementParser.cpp  emitterMetaData.cpp  namedElementParser.cpp  namespaceParser.cpp  opaqueBehaviorParser.cpp  operationParser.cpp  packageParser.cpp  packageableElementParser.cpp  parser.cpp  (+4 more)
src/cpp/yuml-parsers/: CMakeLists.txt  actionParser.cpp  activityEdgeParser.cpp  activityNodeParser.cpp  activityParser.cpp  behaviorParser.cpp  callBehaviorActionParser.cpp  classParser.cpp  classifierParser.cpp  controlFlowParser.cpp  createObjectActionParser.cpp  decisionNodeParser.cpp  directedRelationshipParser.cpp  elementParser.cpp  expressionParser.cpp  finalNodeParser.cpp  forkNodeParser.cpp  generalizationParser.cpp  initialNodeParser.cpp  inputPinParser.cpp  instanceSpecificationParser.cpp  joinNodeParser.cpp  mergeNodeParser.cpp  modelParser.cpp  multiplicityElementParser.cpp  namedElementParser.cpp  namespaceParser.cpp  objectFlowParser.cpp  objectNodeParser.cpp  opaqueBehaviorParser.cpp  operationParser.cpp  outputPinParser.cpp  packageParser.cpp  packageableElementParser.cpp  parameterNodeParser.cpp  parameterParser.cpp  parser.cpp  pinParser.cpp  propertyParser.cpp  relationshipParser.cpp  (+3 more)
src/uml/: CMakeLists.txt  class.h  classifier.cpp  classifier.h  element.cpp  element.h  id.cpp  model.cpp  model.h  namedElement.cpp  namedElement.h  namespace.cpp  namespace.h  project.cpp  project.h  property.h  typedElement.cpp  typedElement.h
src/uml/managers/: abstractElement.cpp  abstractManager.cpp  baseElement.cpp  filePersistencePolicy.cpp  managerNode.cpp
src/uml/set/: abstractSet.cpp  setNode.cpp
src/uml/types/: abstraction.cpp  action.cpp  actionInputPin.cpp  activity.cpp  activityEdge.cpp  activityFinalNode.cpp  activityGroup.cpp  activityNode.cpp  activityParameterNode.cpp  activityPartition.cpp  artifact.cpp  association.cpp  behavior.cpp  behavioralFeature.cpp  behavioredClassifier.cpp  callAction.cpp  callBehaviorAction.cpp  centralBufferNode.cpp  class.cpp  classifier.cpp  classifierTemplateParameter.cpp  comment.cpp  connectableElement.cpp  connector.cpp  connectorEnd.cpp  constraint.cpp  controlFlow.cpp  controlNode.cpp  createObjectAction.cpp  dataStoreNode.cpp  dataType.cpp  decisionNode.cpp  dependency.cpp  deployedArtifact.cpp  deployment.cpp  deploymentTarget.cpp  directedRelationship.cpp  element.cpp  elementImport.cpp  encapsulatedClassifier.cpp  (+74 more)
(+1014 files in other folders)
